feat : implements mission3-member-order-and-discount